# signet-protocol

./: .env.example  .env.production  .gitattributes  .gitignore  ADVANCED_FEATURES.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPERS.md  Dockerfile  ENTERPRISE_BILLING_SETUP.md  INTEGRATIONS_COMPLETE.md  LICENSE  P0_DELIVERABLES_COMPLETE.md  PUBLISHING_GUIDE.md  PUBLISHING_STATUS.md  README.md  STRIPE_MCP_INTEGRATION_GUIDE.md  STRIPE_MCP_SETUP_COMPLETE.md  TODO.md  api_keys_enterprise.json  docker-compose.yml  fly.toml  generate_test_vector.py  openapi.yaml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  reserved.json  reserved_enterprise.json  reserved_production.json  setup_stripe_products.py  setup_stripe_products_auto.py  setup_stripe_products_demo.py  stripe_products_config.json  stripe_setup_results.json  test_enterprise_billing.py  test_mcp_integration.py  test_sample_invoice.json
.github/: dependabot.yml
adapters/langchain/: README.md  pyproject.toml  signet_callback.py
adapters/langchain/src/signet_langchain/: __init__.py  signet_callback.py
clients/: .gitignore  README.md
docs/: BRANDING.md  COMPLIANCE_CONTROL_MATRIX.md  ERROR_GLOSSARY.md  EXPORT_BUNDLE_WALKTHROUGH.md  METRICS.md  SR-1-SIGNET-RECEIPT-SPEC.md  SVX-1-VERIFIED-EXCHANGE-SPEC.md  TRUST-FABRIC-STANDARD.md
integrations/: README.md
monitoring/: alertmanager.yml  otel-collector-config.yaml  prometheus.yml
reports/: REORG_PLAN.md  REPO_INVENTORY.md  WORKLOG.md
scripts/: demo_exchange.py  generate_clients.sh  generate_metrics_doc.py  (+2 more)
(+149 files in other folders)
